Fixing some deprecations, like 'new Integer(int)' becomes 'Integer.valueOf()' and the .finalize() method is no longer used.